--- a/app/src/main/res/layout/activity_load_screen.xml
+++ b/app/src/main/res/layout/activity_load_screen.xml
@@ -12,6 +12,6 @@
         android:layout_height="200dp"
         android:layout_centerInParent="true"
         android:id="@+id/loading_circle"
-        app:lottie_rawRes="@raw/loadingcircle"/>
+        app:lottie_rawRes="@raw/pulseloader"/>
 
 </RelativeLayout>
