--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -11,7 +11,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerInParent="true"
-        app:lottie_rawRes="@raw/pumpingheart"
+        app:lottie_rawRes="@raw/heartbeat"
         android:elevation="10dp"
         android:id="@+id/pumping_heart"/>
 
