--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,24 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
     tools:context=".SettingsActivity">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp">
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:backgroundTint="@color/slightdarkblue"
         android:src="@drawable/back"
         android:id="@+id/back_fab_settings"
         android:elevation="1dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginTop="20dp"/>
+        app:borderWidth="0dp"/>
+
+    <TextView
+        android:layout_width="170dp"
+        android:layout_height="60dp"
+        android:textColor="@color/black"
+        android:layout_toRightOf="@+id/back_fab_settings"
+        android:textSize="41sp"
+        android:fontFamily="@font/crazyxeon"
+        android:layout_marginLeft="186dp"
+        android:text="Settings"/>
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:layout_marginLeft="30dp"
         android:elevation="10dp"
+        android:id="@+id/rel_profile"
+        android:layout_gravity="center"
+        android:background="@drawable/delete_account_btn"
+        >
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/change_profile"
+            android:text="@string/changep"
+            android:layout_toRightOf="@+id/prof_image"
+            android:background="@android:color/transparent"
+            android:fontFamily="@font/poppins_regular"
+            android:maxLines="1"
+            android:textColor="#0B0A0A"
+            android:paddingLeft="17dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:layout_marginRight="30dp"
+            android:textSize="15sp"
+            android:elevation="5dp"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/prof_image"
+            android:layout_marginLeft="30dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_baseline_person_24"
+            app:tint="#0C0B0B" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:elevation="10dp"
+        android:layout_below="@+id/rel_profile"
         android:layout_gravity="center"
         android:background="@drawable/delete_account_btn"
         >
@@ -34,7 +85,7 @@
             android:background="@android:color/transparent"
             android:fontFamily="@font/poppins_regular"
             android:maxLines="1"
-            android:textColor="#F42121"
+            android:textColor="#0E0C0C"
             android:paddingLeft="17dp"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
@@ -48,6 +99,6 @@
             android:layout_marginLeft="30dp"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_baseline_delete_24"
-            app:tint="#851717" />
+            app:tint="#050505" />
     </RelativeLayout>
 </RelativeLayout>
