--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
-        <item android:title="Profile"
-            android:icon="@drawable/ic_baseline_person_24"
+        <item android:title="My History"
+            android:icon="@drawable/ic_baseline_history_24"
             android:id="@+id/profile"/>
+        <item android:title="Medical Profile"
+            android:icon="@drawable/stethoscope"
+            android:id="@+id/contact"/>
         <item android:title="Settings"
             android:icon="@drawable/ic_baseline_settings_24"
             android:id="@+id/settings"/>
-        <item android:title="Contact Us"
-            android:icon="@drawable/ic_baseline_contact_mail_24"
-            android:id="@+id/contact"/>
+
 
     </group>
     <item android:title="">
