--- a/app/src/main/res/layout/activity_contac_us.xml
+++ b/app/src/main/res/layout/activity_contac_us.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
     tools:context=".ContacUsActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:backgroundTint="@color/slightdarkblue"
+            android:src="@drawable/back"
+            android:id="@+id/back_fab_medical"
+            android:elevation="1dp"
+            app:borderWidth="0dp"/>
+
+        <TextView
+            android:layout_width="230dp"
+            android:layout_height="60dp"
+            android:textColor="@color/black"
+            android:layout_toRightOf="@+id/back_fab_history"
+            android:textSize="41sp"
+            android:fontFamily="@font/crazyxeon"
+            android:layout_marginLeft="150dp"
+            android:text="Medical Profile"/>
+
+    </RelativeLayout>
+
+</RelativeLayout>
